--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if (restaurant.get('rating') > alternative.get('rating')):\n",
-    "        return TRUE\n",
+    "        return True\n",
+    "    e;\n",
     "    pass"
    ]
   },
