--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if (restaurant.get('rating') > alternative.get('rating')):\n",
     "        return True\n",
-    "    e;\n",
+    "    else:\n",
+    "        return False\n",
     "    pass"
    ]
   },
