Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,7 @@
     "    if (restaurant.get('rating') > alternative.get('rating')):\n",
     "        return True\n",
     "    else:\n",
-    "        return False\n",
-    "    pass"
+    "        return False\n"
    ]
   },
   {
