Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "    if (restaurant.get('rating') > alternative.get('rating')):\n",
     "        return restaurant\n",
     "    else:\n",
-    "        return False\n"
+    "        return alternative\n"
    ]
   },
   {
