--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,10 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    pass"
+    "   if (restaurant.get('rating') > alternative.get('rating')):\n",
+    "        return restaurant\n",
+    "    else:\n",
+    "        return alternative"
    ]
   },
   {
