--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "   if (restaurant.get('rating') > alternative.get('rating')):\n",
+    "   if (restaurant.get('price') > alternative.get('price')):\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
