--- a/index.ipynb
+++ b/index.ipynb
@@ -188,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if (restaurant.get('price') > alternative.get('price')):\n",
+    "    if (restaurant.get('price') < alternative.get('price')):\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
