--- a/index.ipynb
+++ b/index.ipynb
@@ -238,8 +238,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fork_fig['is_closed'] # False\n"
+    "fork_fig['is_closed'] # False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
