--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for"
+   ]
   },
   {
    "cell_type": "code",
