--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "frontier"
+   ]
   },
   {
    "cell_type": "code",
