--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frontier_restaurant.get"
+    "frontier_restaurant.get('is_closed')"
    ]
   },
   {
