--- a/index.ipynb
+++ b/index.ipynb
@@ -337,6 +337,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open=[]\n",
     "    pass"
    ]
   },
