Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -338,6 +338,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
+    "    for restaurant in \n",
     "    pass"
    ]
   },
