--- a/index.ipynb
+++ b/index.ipynb
@@ -338,7 +338,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
-    "    for restaurant in \n",
+    "    for restaurant in restaurants:\n",
+    "        if\n",
     "    pass"
    ]
   },
