--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,7 @@
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if\n",
+    "        if restaurant.\n",
     "    pass"
    ]
   },
