Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,7 @@
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if (restaurant.get('is_closed'))\n",
+    "        if (restaurant.get('is_closed')):\n",
     "    pass"
    ]
   },
