Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,8 @@
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
     "        if (restaurant.get('is_closed')):\n",
-    "            \n",
+    "            continue\n",
+    "        el\n",
     "    pass"
    ]
   },
