Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,8 +342,8 @@
     "        if (restaurant.get('is_closed')):\n",
     "            continue\n",
     "        else:\n",
-    "            open.a\n",
-    "    pass"
+    "            open.append(restaurant)\n",
+    "    return"
    ]
   },
   {
